# dsba-platform-template

./: .dockerignore  README.md  pyproject.toml  requirement.txt
.github/workflows/: ci.yml  client-trigger.yml  deploy-gke.yml  release.yml
deploy/: kubernetes.yaml
docs/: roadmap.md  runbook.md
monitor/: alerts.yml  dashboard.json  prometheus_config.yml
src/api/: Dockerfile.api  api.py
src/cli/: dsba_cli
src/dsba/: model_evaluation.py  model_prediction.py  model_registry.py  model_training.py  preprocessing.py
src/dsba/data_ingestion/: clean.py  files.py  pipeline.py  transform.py  validate.py
src/notebooks/: Dashboard_(2).ipynb  Dashboard_Update2.ipynb
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py
